--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@nextui-org/react": "^2.4.8",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@react-stately/data": "^3.11.7",
+    "@tanstack/react-query": "^5.60.4",
+    "framer-motion": "^11.11.17",
+    "next": "15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "viem": "^2.21.45",
+    "wagmi": "^2.12.32"
   },
   "devDependencies": {
     "postcss": "^8",
