--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-stately/data": "^3.11.7",
     "@tanstack/react-query": "^5.60.4",
     "framer-motion": "^11.11.17",
+    "lenis": "^1.1.16",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "^18.3.1",
@@ -22,7 +23,10 @@
     "wagmi": "^2.12.32"
   },
   "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.6.3"
   }
 }
