--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@react-stately/data": "^3.11.7",
     "@tanstack/react-query": "^5.60.4",
+    "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.11.17",
+    "lucide": "^0.460.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "^18.3.1",
