--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.81.0",
     "viem": "^2.21.45",
     "wagmi": "^2.12.32"
   },
