--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@react-stately/data": "^3.11.7",
+    "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-query": "^5.60.4",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.11.17",
