--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.13.3",
     "sass": "^1.81.0",
     "viem": "^2.21.45",
     "wagmi": "^2.12.32"
