--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-query": "^5.60.4",
     "bootstrap-icons": "^1.11.3",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
     "lenis": "^1.1.16",
     "lucide": "^0.460.0",
