--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-stately/data": "^3.11.7",
     "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-query": "^5.60.4",
+    "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
