--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "bootstrap-icons": "^1.11.3",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
+    "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "lenis": "^1.1.16",
     "lucide": "^0.460.0",
